--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.parquet filter=lfs diff=lfs merge=lfs -text
+*.praquet filter=lfs diff=lfs merge=lfs -text
